# kiro-conduit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PITCH.md  PRD.md  PUBLISHING.md  REPO_RENAME_PLAN.md  ROADMAP.md  SYSTEM_OVERVIEW.md  USAGE.md  runtime-routing.md
examples/: 01_hello.py  02_civ_hello.py  03_m1_demo.py  04_m1_stub_first_demo.py
examples/dags/: cross-repo.yaml  m1-hello.yaml  m1-stub-first.yaml
examples/specs/: pkg-base.md  pkg-mul-stub-first.md  pkg-mul.md  pkg-stub.md  pkg-sub-stub-first.md  pkg-sub.md
kiro_conduit/: __init__.py  cli.py  contracts.py  dag.py  dashboard.py  git_utils.py  locks.py  memory.py  merge.py  metrics.py  orchestrator.py  plan_review.py  planner.py  run_state.py  semantic.py  types.py  worktree.py
kiro_conduit/acp/: __init__.py  client.py  messages.py
kiro_conduit/roles/: __init__.py  coordinator.py  implementor.py  verifier.py
kiro_conduit/runtime/: __init__.py  cursor_cli.py  gemini_cli.py  model_router.py  native_quota.py  quota.py  session_id.py  types.py
lwa_conduit/: __init__.py  cli.py  dashboard.py  event_export.py  events.py  locks.py  memory.py  merge.py  metrics.py  orchestrator.py  paths.py  plan_review.py  planner.py  run_state.py  sandbox.py  semantic.py  types.py  worktree.py
lwa_conduit/acp/: __init__.py  client.py  messages.py
lwa_conduit/roles/: __init__.py  coordinator.py  implementor.py  verifier.py
lwa_conduit/runtime/: __init__.py  cursor_cli.py  gemini_cli.py  model_router.py  native_quota.py  quota.py  registry.py  session_id.py  types.py
tests/: conftest.py
tests/fakes/: mock_acp_server.py
tests/integration/: test_acp_client.py  test_cross_repo_pipeline.py  test_large_spec_pipeline.py
tests/unit/: test_byoa.py  test_cli.py  test_client_parsing.py  test_contracts.py  test_coordinator.py  test_dag.py  test_dashboard.py  test_event_export.py  test_events.py  test_git_utils.py  test_implementor.py  test_locks.py  test_memory.py  test_merge.py  test_messages.py  test_metrics.py  test_native_quota.py  test_orchestrator.py  test_paths.py  test_plan_review.py  test_planner.py  test_quota.py  test_run_state.py  test_runtime_model_router.py  test_sandbox.py  test_semantic.py  test_verifier.py  test_worktree.py
tools/: stability_run.py
