[project]
name = "kiro-conduit"
version = "0.0.1"
description = "LWA Conduit — DAG parallel orchestration for local multi-CLI agents (Cursor/Kiro). Spec → DAG → role workers → merge."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Walter Wang", email = "wangwalterhandsome@gmail.com" }]
keywords = [
    "lwa",
    "lark-local-agent-workbench",
    "conduit",
    "kiro",
    "cursor",
    "multi-cli",
    "ai-coding",
    "multi-agent",
    "orchestration",
    "git-worktree",
    "spec-driven-development",
    "agent-client-protocol",
    "adaptive-routing",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

# M0 PoC 阶段不引入第三方依赖；标准库 (asyncio + subprocess + json + dataclasses) 够用。
# M1 起需要 YAML 解析 dag.yaml；M1.1 step 4 加 rich 做 TUI dashboard。
dependencies = [
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/walterwang0x01/lwa-conduit"
Repository = "https://github.com/walterwang0x01/lwa-conduit"
Issues = "https://github.com/walterwang0x01/lwa-conduit/issues"

[project.scripts]
kiro-conduit = "kiro_conduit.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kiro_conduit"]

# ---- ruff ----
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    # 项目以中文注释为主，全角标点是常态，关掉这三类噪音规则
    "RUF001", # ambiguous unicode in name
    "RUF002", # ambiguous unicode in docstring
    "RUF003", # ambiguous unicode in comment
]

[tool.ruff.lint.isort]
known-first-party = ["kiro_conduit"]

# ---- mypy ----
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---- pytest ----
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
